[workspace]

resolver = "2" # this is required for the wgpu frontend

members = [
    "image-to-text",
    "vector",
    "procgen",
    "rand-range",
    "game",
    "app",
    "native",
    "ansi-terminal",
    "web",
    "app-wip",
    "native-wip",
    "ggez-wip",
    "wgpu-wip",
    "ansi-terminal-wip",
    "web-wip",
]

[profile.release]
lto = true
