[workspace]

resolver = "2" # this is required for the wgpu frontend

members = [
    "image-to-text",
    "procgen",
    "game",
    "app",
    "native",
    "ansi-terminal",
    "web",
    "ggez",
    "wgpu",
    "util/vector",
    "util/rand-range",
    "util/rational",
]

[profile.release]
lto = true
