[package]
name = "ansi-terminal-wip"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
chargrid_ansi_terminal = { git = "https://github.com/gridbugs/chargrid", features = ["gamepad"] }
env_logger = "0.9"
meap = "0.5"
orbital_decay_app_wip = { path = "../app-wip" }
orbital_decay_native_wip = { path = "../native-wip" }
rand = "0.8"
