[package]
name = "orbital_decay_ansi_terminal"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
orbital_decay_native = { path = "../native" }
orbital_decay_app = { path = "../app" }
env_logger = "0.9"
rand = "0.8"
chargrid_ansi_terminal = { version = "0.2", features = ["gamepad"] }
