[package]
name = "boat_journey_ansi_terminal"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
gridbugs = { version = "0.9", features = [ "chargrid_ansi_terminal_gamepad" ] }
env_logger = "0.10"
meap = "0.5"
boat_journey_app = { path = "../app" }
boat_journey_native = { path = "../native" }
rand = "0.8"
