[package]
name = "orbital_decay_app_wip"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[features]
native = ["general_audio_static/native", "general_storage_static/file"]
web = ["general_audio_static/web", "general_storage_static/web", "getrandom/js"]

[dependencies]
orbital_decay_game = { path = "../game" }
log = "0.4"
general_storage_static = { version = "0.1", features = ["bincode", "json"] }
general_audio_static = "0.3"
serde = { version = "1.0", features = ["serde_derive"] }
rand = "0.8"
rand_isaac = { version = "0.3", features = ["serde1"] }
rand_xorshift = { version = "0.3", features = ["serde1"] }
rgb24 = "0.3"
line_2d = "0.5"
grid_2d = { version = "0.15", features = ["serialize"] }
direction = { version = "0.18", features = ["serialize", "rand"] }
getrandom = "0.2"
chargrid = { git = "https://github.com/gridbugs/chargrid", features = ["serialize", "gamepad"] }
