[package]
name = "orbital_decay_app"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[features]
print_stdout = []
print_log = []
native = ["gridbugs/storage_backend_file", "gridbugs/audio_backend_native"]
web = ["getrandom/js", "gridbugs/storage_backend_web", "gridbugs/audio_backend_web"]

[dependencies]
gridbugs = { version = "0.9", features = [
    "storage_format_json",
    "storage_format_bincode",
    "audio",
    "direction",
    "direction_rand",
    "rgb_int",
    "coord_2d",
    "chargrid_serialize",
    "chargrid_gamepad",
] }
orbital_decay_game = { path = "../game" }
audio_data = { path = "../audio-data" }
log = "0.4"
serde = { version = "1.0", features = ["serde_derive"] }
rand = "0.8"
rand_isaac = { version = "0.3", features = ["serde1"] }
rand_xorshift = { version = "0.3", features = ["serde1"] }
maplit = "1.0"
getrandom = "0.2"
