[package]
name = "boat_journey_app"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[features]
print_stdout = []
print_log = []
native = ["general_storage_static/file"]
web = ["getrandom/js", "general_storage_static/web"]

[dependencies]
general_storage_static = { version = "0.3", features = ["bincode", "json"] }
direction = "0.18"
chargrid = { version = "0.10", features = ["serialize"] }
rgb_int = "0.1"
perlin2 = { version = "0.1", features = ["serialize"] }
coord_2d = "0.3"
grid_2d = "0.15"
boat_journey_game = { path = "../game" }
log = "0.4"
serde = { version = "1.0", features = ["serde_derive"] }
rand = "0.8"
rand_isaac = { version = "0.3", features = ["serde1"] }
rand_xorshift = { version = "0.3", features = ["serde1"] }
maplit = "1.0"
getrandom = "0.2"
bincode = "1.3"
