[package]
name = "boat_journey_game"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
coord_2d = "0.3"
direction = "0.18"
entity_table = { version = "0.2", features = ["serialize"] }
spatial_table = { version = "0.4", features = ["serialize"] }
grid_2d = "0.15"
line_2d = { version = "0.5", features = ["serialize"] }
rgb_int = "0.1"
grid_search_cardinal_distance_map = { version = "0.3", features = ["serialize"] }
shadowcast = { version = "0.8", features = ["serialize"] }
visible_area_detection = { version = "0.2", features = ["serialize"] }
log = "0.4"
serde = { version = "1.0", features = ["serde_derive"] }
rand = "0.8"
rand_isaac = { version = "0.3", features = ["serde1"] }
vector = { path = "../util/vector" }
rational = { path = "../util/rational" }
rand_range = { path = "../util/rand-range" }
procgen = { path = "../procgen" }
