[package]
name = "orbital_decay_ggez_wip"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[dependencies]
orbital_decay_app_wip = { path = "../app-wip" }
env_logger = "0.9"
meap = "0.5"
serde_json = "1.0"
general_storage_static = { version = "0.1", features = ["file"] }
general_audio_static = { version = "0.3", features = ["native", "native_mp3"] }
chargrid_ggez = { git = "https://github.com/gridbugs/chargrid", features = ["gamepad"] }
