[package]
name = "orbital_decay_ggez_wip"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
chargrid_ggez = { git = "https://github.com/gridbugs/chargrid", features = ["gamepad"] }
env_logger = "0.9"
orbital_decay_app_wip = { path = "../app-wip" }
orbital_decay_native_wip = { path = "../native-wip" }
