[package]
name = "orbital_decay_ggez"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
gridbugs = { version = "0.7", features = [ "chargrid_ggez_gamepad" ] }
env_logger = "0.10"
orbital_decay_app = { path = "../app" }
orbital_decay_native = { path = "../native" }
