[package]
name = "template2023_ggez"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
gridbugs = { version = "0.9", features = [ "chargrid_ggez_gamepad" ] }
env_logger = "0.10"
template2023_app = { path = "../app" }
template2023_native = { path = "../native" }
