[package]
name = "orbital_decay_graphical"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[features]
force_dedicated_audio_thread = ["orbital_decay_native/force_dedicated_audio_thread"]

[dependencies]
orbital_decay_app = { path = "../app" }
orbital_decay_native = { path = "../native" }
env_logger = "0.8"
chargrid_graphical = { version = "0.6", features = ["gamepad"] }
