[package]
name = "orbital_decay_native_old"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[features]
force_dedicated_audio_thread = ["general_audio_static/native_force_dedicated_audio_thread"]

[dependencies]
orbital_decay_app_old = { path = "../app-old", features = ["native"] }
log = "0.4"
meap = "0.5"
serde_json = "1.0"
general_storage_static = { version = "0.2", features = ["file"] }
general_audio_static = { version = "0.3", features = ["native", "native_mp3"] }
