[package]
name = "boat_journey_native"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
gridbugs = { version = "0.9", features = [
    "storage_backend_file",
    "audio_backend_native",
    "audio_format_native_vorbis",
] }
log = "0.4"
boat_journey_app = { path = "../app", features = ["native"] }
meap = "0.5"
