[package]
name = "procgen"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
gridbugs = { version = "0.9", features = [
    "perlin2",
    "coord_2d",
    "grid_2d",
    "line_2d",
    "entity_table",
]}
rand = "0.8"
vector = { path = "../util/vector" }

[dev-dependencies]
gridbugs = { version = "0.9", features = [
    "chargrid",
    "chargrid_ansi_terminal",
    "rgb_int",
    "direction",
] }
meap = "0.5"
rand_isaac = "0.3"
