[package]
name = "procgen"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
coord_2d = "0.3"
grid_2d = "0.15"
direction = "0.18"
line_2d = "0.5"
perlin2 = "0.1"
rand = "0.8"
vector = { path = "../util/vector" }

[dev-dependencies]
chargrid_ansi_terminal = "0.4"
chargrid = "0.10"
rgb_int = "0.1"
meap = "0.5"
rand_isaac = "0.3"
