[package]
name = "orbital_decay_web_old"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
orbital_decay_app_old = { path = "../app-old", features = ["web"]}
chargrid_web = { version = "0.2" }
general_storage_static = { version = "0.2", features = ["web"] }
general_audio_static = { version = "0.3", features = ["web"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = "0.4"
