[package]
name = "orbital_decay_web_wip"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
orbital_decay_app_wip = { path = "../app-wip", features = ["web", "print_log"]}
chargrid_web = { git = "https://github.com/gridbugs/chargrid" }
general_storage_static = { version = "0.2", features = ["web"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = "0.4"
