[package]
name = "template2023_web"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gridbugs = { version = "0.9", features = [
    "chargrid_web_gamepad",
    "storage_backend_web",
    "audio_backend_web",
] }
template2023_app = { path = "../app", features = ["web", "print_log"]}
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = "0.4"
