[package]
name = "boat_journey_web"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gridbugs = { version = "0.10", features = [
    "chargrid_web",
    "storage_backend_web",
    "audio_backend_web",
] }
boat_journey_app = { path = "../app", features = ["web", "print_log"]}
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = "0.4"
