[package]
name = "orbital_decay_wgpu"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
gridbugs = { version = "0.3", features = [ "chargrid_wgpu_gamepad" ] }
env_logger = "0.9"
orbital_decay_app = { path = "../app", features = ["print_stdout"] }
orbital_decay_native = { path = "../native" }
