[package]
name = "boat_journey_wgpu"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
gridbugs = { version = "0.9", features = [ "chargrid_wgpu_gamepad" ] }
env_logger = "0.10"
boat_journey_app = { path = "../app", features = ["print_stdout"] }
boat_journey_native = { path = "../native" }
